# anerror-rs

./: Cargo.toml  README.md
config/: error.toml
src/: lib.rs  main.rs
src/mgr/: configurer.rs  fortune.rs  mod.rs
src/mgr/error/: mod.rs
src/svc/: mod.rs
src/svc/any/: mod.rs
src/util/: mod.rs
