[package]
name = "anerror"
version = "0.1.0"
authors = ["chenyuzhi <chenyuzhi@hikvision.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
# config = "0.11.0"
serde = { version = "1.0.117", features=["derive"] }
serde_derive = "1.0.117"
regex = "1.5.4"
# runtime-fmt = "0.4.1"
# anyhow = "1.0"
# thiserror = "1.0"